// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Diagnostics should match snapshot (no isobars) 1`] = `
<div mock-v-loading="0">
  <!---->
  <!---->
  <!---->
  <div class="">
    <div class="el-row" id="scores-table">
      <div class="msm-score-calc">
        MSM score =
        <span>0.657</span> =
        <span>0.686</span>
        (ρ<sub>spatial</sub>) ×
        <span>0.959</span>
        (ρ<sub>spectral</sub>) ×
        <span>0.999</span>
        (ρ<sub>chaos</sub>)
      </div>
      <div>
        <mock-el-popover trigger="hover" open-delay="100">
          <div slot-key="default">
            Image analysis gave an off-sample probability of less than 10%.
          </div>
          <div slot-key="reference"><span class="on-sample-tag">
        On-sample
      </span></div>
        </mock-el-popover>
      </div>
    </div>
    <div class="isotope-images-container el-row">
      <div class="el-col el-col-24 el-col-xs-24 el-col-sm-12 el-col-md-12 el-col-lg-6">
        <div class="small-peak-image">
          100.0000
          <!----> <br>
          <imageloader-stub src="/fs/iso_images/img1" colormap="Viridis" image-fit-params="[object Object]" min-intensity="0" max-intensity="100" show-pixel-intensity="" annotimageopacity="1" opacitymode="constant" imageposition="[object Object]" pixelaspectratio="1" style="overflow: hidden;"></imageloader-stub>
        </div>
      </div>
      <div class="el-col el-col-24 el-col-xs-24 el-col-sm-12 el-col-md-12 el-col-lg-6">
        <div class="small-peak-image">
          101.0000
          <!----> <br>
          <imageloader-stub src="/fs/iso_images/img2" colormap="Viridis" image-fit-params="[object Object]" min-intensity="100" max-intensity="200" show-pixel-intensity="" annotimageopacity="1" opacitymode="constant" imageposition="[object Object]" pixelaspectratio="1" style="overflow: hidden;"></imageloader-stub>
        </div>
      </div>
    </div>
  </div>
  <!---->
  <!---->
  <div>
    <div class="el-row" id="isotope-plot-container">
      <div class="peak-chart">
        <div style="height: 300px;"><svg width="0" height="0">
            <defs>
              <pattern id="pattern-stripe" width="6" height="6" patternUnits="userSpaceOnUse" patternTransform="rotate(45)">
                <rect width="3" height="6" transform="translate(0,0)" fill="white"></rect>
              </pattern>
              <mask id="mask-stripe">
                <rect x="0" y="0" width="100%" height="100%" fill="url(#pattern-stripe)"></rect>
              </mask>
            </defs>
            <g transform="translate(40, 10)">
              <g transform="translate(0, -60)" fill="none" font-size="10" font-family="sans-serif" text-anchor="middle">
                <path class="domain" stroke="currentColor" d="M0.5,6V0.5H-79.5V6"></path>
                <g class="tick" opacity="1" transform="translate(-6.166666666666351,0)">
                  <line stroke="currentColor" y2="6"></line><text fill="currentColor" y="9" dy="0.71em">100.0</text>
                </g>
                <g class="tick" opacity="1" transform="translate(-19.5,0)">
                  <line stroke="currentColor" y2="6"></line><text fill="currentColor" y="9" dy="0.71em">100.2</text>
                </g>
                <g class="tick" opacity="1" transform="translate(-32.83333333333365,0)">
                  <line stroke="currentColor" y2="6"></line><text fill="currentColor" y="9" dy="0.71em">100.4</text>
                </g>
                <g class="tick" opacity="1" transform="translate(-46.16666666666635,0)">
                  <line stroke="currentColor" y2="6"></line><text fill="currentColor" y="9" dy="0.71em">100.6</text>
                </g>
                <g class="tick" opacity="1" transform="translate(-59.5,0)">
                  <line stroke="currentColor" y2="6"></line><text fill="currentColor" y="9" dy="0.71em">100.8</text>
                </g>
                <g class="tick" opacity="1" transform="translate(-72.83333333333366,0)">
                  <line stroke="currentColor" y2="6"></line><text fill="currentColor" y="9" dy="0.71em">101.0</text>
                </g>
              </g>
              <g fill="none" font-size="10" font-family="sans-serif" text-anchor="end">
                <path class="domain" stroke="currentColor" d="M-6,-59.5H0.5V0.5H-6"></path>
                <g class="tick" opacity="1" transform="translate(0,-59.5)">
                  <line stroke="currentColor" x2="-6"></line><text fill="currentColor" x="-11" dy="0.32em">0</text>
                </g>
                <g class="tick" opacity="1" transform="translate(0,-47.5)">
                  <line stroke="currentColor" x2="-6"></line><text fill="currentColor" x="-11" dy="0.32em">20</text>
                </g>
                <g class="tick" opacity="1" transform="translate(0,-35.5)">
                  <line stroke="currentColor" x2="-6"></line><text fill="currentColor" x="-11" dy="0.32em">40</text>
                </g>
                <g class="tick" opacity="1" transform="translate(0,-23.5)">
                  <line stroke="currentColor" x2="-6"></line><text fill="currentColor" x="-11" dy="0.32em">60</text>
                </g>
                <g class="tick" opacity="1" transform="translate(0,-11.5)">
                  <line stroke="currentColor" x2="-6"></line><text fill="currentColor" x="-11" dy="0.32em">80</text>
                </g>
                <g class="tick" opacity="1" transform="translate(0,0.5)">
                  <line stroke="currentColor" x2="-6"></line><text fill="currentColor" x="-11" dy="0.32em">100</text>
                </g>
              </g><text class="intensity-axis-label" transform="translate(-30, -30) rotate(-90)">Relative intensity</text><text style="text-anchor: middle;" transform="translate(-40, -30) ">m/z</text>
              <g class="sample-graph soloSample">
                <g>
                  <circle cx="-6.666666666666351" cy="0" r="4"></circle>
                  <circle cx="-73.33333333333366" cy="-24" r="4"></circle>
                </g>
                <g>
                  <line x1="-6.666666666666351" x2="-6.666666666666351" y1="0" y2="-60"></line>
                  <line x1="-73.33333333333366" x2="-73.33333333333366" y1="-24" y2="-60"></line>
                </g>
                <g>
                  <rect width="-0.03999999999943338" height="-60" x="-6.6466666666666345" y="0"></rect>
                  <rect width="-0.04040000000031796" height="-36" x="-73.3131333333335" y="-24"></rect>
                </g>
              </g>
              <g class="theor-graph soloTheor">
                <g>
                  <path d="M0,-60L-6.666666666666351,-59.4L-13.333333333332702,-60L-66.6666666666673,-60L-73.33333333333366,-59.7L-80,-60"></path>
                </g>
              </g>
              <g fill="none" pointer-events="all">
                <rect class="overlay" pointer-events="all" cursor="crosshair" x="0" y="0" width="-80" height="-60"></rect>
                <rect class="selection" cursor="move" fill="#777" fill-opacity="0.3" stroke="#fff" shape-rendering="crispEdges" style="display: none;"></rect>
                <rect class="handle handle--w" cursor="ew-resize" style="display: none;"></rect>
                <rect class="handle handle--e" cursor="ew-resize" style="display: none;"></rect>
              </g>
            </g>
          </svg></div>
        <div class="plot-legend">
          <div class="legend-item"><svg width="64" height="32">
              <g>
                <g class="theor-graph soloTheor">
                  <g>
                    <path d="M0,31L2,31L4,31L6,31L8,31L10,30.7L12,30.4L14,29.8L16,28.3L18,26.2L20,22.9L22,18.4L24,13.3L26,7.900000000000002L28,3.6999999999999993L30,1L32,1L34,3.400000000000002L36,7.900000000000002L38,13L40,18.4L42,22.6L44,26.2L46,28.3L48,29.5L50,30.4L52,30.7L54,31L56,31L58,31L60,31L62,31"></path>
                  </g>
                </g>
              </g>
            </svg> <span class="legend-item-name">Theoretical</span></div>
          <div class="legend-item"><svg width="64" height="32">
              <g>
                <g class="sample-graph soloSample">
                  <g>
                    <circle cx="32" cy="4" r="4"></circle>
                  </g>
                  <g>
                    <line x1="32" x2="32" y1="4" y2="32"></line>
                  </g>
                  <g>
                    <rect width="48" height="28" x="8" y="4"></rect>
                  </g>
                </g>
              </g>
            </svg> <span class="legend-item-name">Sample</span></div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Diagnostics should match snapshot (with isobar) 1`] = `
<div mock-v-loading="0">
  <transition-stub name="el-alert-fade" class="isobar-alert">
    <div role="alert" class="el-alert el-alert--warning is-light"><i class="el-alert__icon el-icon-warning is-big"></i>
      <div class="el-alert__content">
        <!---->
        <p class="el-alert__description">
          Another ion was annotated that is isobaric to the selected annotation.
          <!---->
          Select an isobaric annotation below to compare against.
        </p>
        <!----><i class="el-alert__closebtn el-icon-close" style="display: none;"></i>
      </div>
    </div>
  </transition-stub>
  <div class="compare-container">
    Compare selected annotation to:
    <mock-el-select placeholder="None" clearable="" class="compare-select" value="C8H9S2">
      <mock-el-option value="C8H9S2" label="[M+0.0000]: [C8H10S2 - H]⁻">[M+0.0000]: [C<sub>8</sub>H<sub>10</sub>S<sub>2</sub> - H]⁻</mock-el-option>
    </mock-el-select>
  </div>
  <div class="ref-annotation-header">
    <mock-el-popover trigger="hover" placement="top" open-delay="100">
      <div slot-key="default">
        <div><span>Candidate molecules (1):</span>
          <ul>
            <li>
              C.I. Food Red 6
            </li>
            <!---->
          </ul>
          <!---->
          <!---->
        </div>
      </div>
      <div slot-key="reference"><span class="annotation-ion">[C<sub>19</sub>H<sub>18</sub>N<sub>2</sub>O<sub>7</sub>S<sub>2</sub> - H]⁺</span></div>
    </mock-el-popover> <span style="padding-left: 5px;">(Selected annotation)</span>
  </div>
  <div class="ref-annotation-container">
    <div class="el-row" id="scores-table">
      <div class="msm-score-calc">
        MSM score =
        <span>0.657</span> =
        <span>0.686</span>
        (ρ<sub>spatial</sub>) ×
        <span>0.959</span>
        (ρ<sub>spectral</sub>) ×
        <span>0.999</span>
        (ρ<sub>chaos</sub>)
      </div>
      <div>
        <mock-el-popover trigger="hover" open-delay="100">
          <div slot-key="default">
            Image analysis gave an off-sample probability of less than 10%.
          </div>
          <div slot-key="reference"><span class="on-sample-tag">
        On-sample
      </span></div>
        </mock-el-popover>
      </div>
    </div>
    <div class="isotope-images-container el-row">
      <div class="el-col el-col-24 el-col-xs-24 el-col-sm-12 el-col-md-12 el-col-lg-6">
        <div class="small-peak-image">
          100.0000
          <mock-el-popover trigger="hover" placement="top">
            <div slot-key="default">
              This peak's detection window overlaps with the other annotation's 1st peak.
            </div>
            <div slot-key="reference"><i class="el-icon-warning-outline"></i></div>
          </mock-el-popover> <br>
          <imageloader-stub src="/fs/iso_images/img1" colormap="Viridis" image-fit-params="[object Object]" min-intensity="0" max-intensity="100" show-pixel-intensity="" annotimageopacity="1" opacitymode="constant" imageposition="[object Object]" pixelaspectratio="1" style="overflow: hidden;"></imageloader-stub>
        </div>
      </div>
      <div class="el-col el-col-24 el-col-xs-24 el-col-sm-12 el-col-md-12 el-col-lg-6">
        <div class="small-peak-image">
          101.0000
          <!----> <br>
          <imageloader-stub src="/fs/iso_images/img2" colormap="Viridis" image-fit-params="[object Object]" min-intensity="100" max-intensity="200" show-pixel-intensity="" annotimageopacity="1" opacitymode="constant" imageposition="[object Object]" pixelaspectratio="1" style="overflow: hidden;"></imageloader-stub>
        </div>
      </div>
    </div>
  </div>
  <div class="comp-annotation-header">
    <!----> <span><mock-el-popover trigger="hover" placement="top" open-delay="100"><div slot-key="default"><div><span>Candidate molecules (1):</span>
    <ul>
      <li>
        C.I. Food Red 6
      </li>
      <!---->
    </ul>
    <!---->
    <!---->
  </div>
</div>
<div slot-key="reference"><span class="annotation-ion">[C<sub>8</sub>H<sub>10</sub>S<sub>2</sub> - H]⁻</span></div>
</mock-el-popover>
<!----></span></div>
<div class="comp-annotation-container">
  <div class="el-row" id="scores-table">
    <div class="msm-score-calc">
      MSM score =
      <span>0.657</span> =
      <span>0.686</span>
      (ρ<sub>spatial</sub>) ×
      <span>0.959</span>
      (ρ<sub>spectral</sub>) ×
      <span>0.999</span>
      (ρ<sub>chaos</sub>)
    </div>
    <div>
      <mock-el-popover trigger="hover" open-delay="100">
        <div slot-key="default">
          Image analysis gave an off-sample probability of 88%.
        </div>
        <div slot-key="reference"><span class="off-sample-tag">
        Off-sample
      </span></div>
      </mock-el-popover>
    </div>
  </div>
  <div class="isotope-images-container el-row">
    <div class="el-col el-col-24 el-col-xs-24 el-col-sm-12 el-col-md-12 el-col-lg-6">
      <div class="small-peak-image">
        100.0000
        <mock-el-popover trigger="hover" placement="top">
          <div slot-key="default">
            This peak's detection window overlaps with the other annotation's 1st peak.
          </div>
          <div slot-key="reference"><i class="el-icon-warning-outline"></i></div>
        </mock-el-popover> <br>
        <imageloader-stub src="/fs/iso_images/img1" colormap="Viridis" image-fit-params="[object Object]" min-intensity="0" max-intensity="100" show-pixel-intensity="" annotimageopacity="1" opacitymode="constant" imageposition="[object Object]" pixelaspectratio="1" style="overflow: hidden;"></imageloader-stub>
      </div>
    </div>
    <div class="el-col el-col-24 el-col-xs-24 el-col-sm-12 el-col-md-12 el-col-lg-6">
      <div class="small-peak-image">
        101.0000
        <!----> <br>
        <imageloader-stub src="/fs/iso_images/img2" colormap="Viridis" image-fit-params="[object Object]" min-intensity="100" max-intensity="200" show-pixel-intensity="" annotimageopacity="1" opacitymode="constant" imageposition="[object Object]" pixelaspectratio="1" style="overflow: hidden;"></imageloader-stub>
      </div>
    </div>
  </div>
</div>
<div>
  <div class="el-row" id="isotope-plot-container">
    <div class="peak-chart">
      <div style="height: 300px;"><svg width="0" height="0">
          <defs>
            <pattern id="pattern-stripe" width="6" height="6" patternUnits="userSpaceOnUse" patternTransform="rotate(45)">
              <rect width="3" height="6" transform="translate(0,0)" fill="white"></rect>
            </pattern>
            <mask id="mask-stripe">
              <rect x="0" y="0" width="100%" height="100%" fill="url(#pattern-stripe)"></rect>
            </mask>
          </defs>
          <g transform="translate(40, 10)">
            <g transform="translate(0, -60)" fill="none" font-size="10" font-family="sans-serif" text-anchor="middle">
              <path class="domain" stroke="currentColor" d="M0.5,6V0.5H-79.5V6"></path>
              <g class="tick" opacity="1" transform="translate(-6.166666666666351,0)">
                <line stroke="currentColor" y2="6"></line><text fill="currentColor" y="9" dy="0.71em">100.0</text>
              </g>
              <g class="tick" opacity="1" transform="translate(-19.5,0)">
                <line stroke="currentColor" y2="6"></line><text fill="currentColor" y="9" dy="0.71em">100.2</text>
              </g>
              <g class="tick" opacity="1" transform="translate(-32.83333333333365,0)">
                <line stroke="currentColor" y2="6"></line><text fill="currentColor" y="9" dy="0.71em">100.4</text>
              </g>
              <g class="tick" opacity="1" transform="translate(-46.16666666666635,0)">
                <line stroke="currentColor" y2="6"></line><text fill="currentColor" y="9" dy="0.71em">100.6</text>
              </g>
              <g class="tick" opacity="1" transform="translate(-59.5,0)">
                <line stroke="currentColor" y2="6"></line><text fill="currentColor" y="9" dy="0.71em">100.8</text>
              </g>
              <g class="tick" opacity="1" transform="translate(-72.83333333333366,0)">
                <line stroke="currentColor" y2="6"></line><text fill="currentColor" y="9" dy="0.71em">101.0</text>
              </g>
            </g>
            <g fill="none" font-size="10" font-family="sans-serif" text-anchor="end">
              <path class="domain" stroke="currentColor" d="M-6,-59.5H0.5V0.5H-6"></path>
              <g class="tick" opacity="1" transform="translate(0,-59.5)">
                <line stroke="currentColor" x2="-6"></line><text fill="currentColor" x="-11" dy="0.32em">0</text>
              </g>
              <g class="tick" opacity="1" transform="translate(0,-47.5)">
                <line stroke="currentColor" x2="-6"></line><text fill="currentColor" x="-11" dy="0.32em">20</text>
              </g>
              <g class="tick" opacity="1" transform="translate(0,-35.5)">
                <line stroke="currentColor" x2="-6"></line><text fill="currentColor" x="-11" dy="0.32em">40</text>
              </g>
              <g class="tick" opacity="1" transform="translate(0,-23.5)">
                <line stroke="currentColor" x2="-6"></line><text fill="currentColor" x="-11" dy="0.32em">60</text>
              </g>
              <g class="tick" opacity="1" transform="translate(0,-11.5)">
                <line stroke="currentColor" x2="-6"></line><text fill="currentColor" x="-11" dy="0.32em">80</text>
              </g>
              <g class="tick" opacity="1" transform="translate(0,0.5)">
                <line stroke="currentColor" x2="-6"></line><text fill="currentColor" x="-11" dy="0.32em">100</text>
              </g>
            </g><text class="intensity-axis-label" transform="translate(-30, -30) rotate(-90)">Relative intensity</text><text style="text-anchor: middle;" transform="translate(-40, -30) ">m/z</text>
            <g class="sample-graph soloSample">
              <g>
                <circle cx="-6.666666666666351" cy="0" r="4"></circle>
                <circle cx="-73.33333333333366" cy="-24" r="4"></circle>
              </g>
              <g>
                <line x1="-6.666666666666351" x2="-6.666666666666351" y1="0" y2="-60"></line>
                <line x1="-73.33333333333366" x2="-73.33333333333366" y1="-24" y2="-60"></line>
              </g>
              <g>
                <rect width="-0.03999999999943338" height="-60" x="-6.6466666666666345" y="0"></rect>
                <rect width="-0.04040000000031796" height="-36" x="-73.3131333333335" y="-24"></rect>
              </g>
            </g>
            <g class="theor-graph soloTheor">
              <g>
                <path d="M0,-60L-6.666666666666351,-59.4L-13.333333333332702,-60L-66.6666666666673,-60L-73.33333333333366,-59.7L-80,-60"></path>
              </g>
            </g>
            <g fill="none" pointer-events="all">
              <rect class="overlay" pointer-events="all" cursor="crosshair" x="0" y="0" width="-80" height="-60"></rect>
              <rect class="selection" cursor="move" fill="#777" fill-opacity="0.3" stroke="#fff" shape-rendering="crispEdges" style="display: none;"></rect>
              <rect class="handle handle--w" cursor="ew-resize" style="display: none;"></rect>
              <rect class="handle handle--e" cursor="ew-resize" style="display: none;"></rect>
            </g>
          </g>
        </svg></div>
      <div class="plot-legend">
        <div class="legend-item"><svg width="64" height="32">
            <g>
              <g class="theor-graph refTheor">
                <g>
                  <path d="M0,31L2,31L4,31L6,31L8,31L10,30.7L12,30.4L14,29.8L16,28.3L18,26.2L20,22.9L22,18.4L24,13.3L26,7.900000000000002L28,3.6999999999999993L30,1L32,1L34,3.400000000000002L36,7.900000000000002L38,13L40,18.4L42,22.6L44,26.2L46,28.3L48,29.5L50,30.4L52,30.7L54,31L56,31L58,31L60,31L62,31"></path>
                </g>
              </g>
            </g>
          </svg> <span class="legend-item-name">[C<sub>19</sub>H<sub>18</sub>N<sub>2</sub>O<sub>7</sub>S<sub>2</sub> - H]⁺<br> Theoretical</span></div>
        <div class="legend-item"><svg width="64" height="32">
            <g>
              <g class="sample-graph refSample">
                <g>
                  <circle cx="32" cy="4" r="4"></circle>
                </g>
                <g>
                  <line x1="32" x2="32" y1="4" y2="32"></line>
                </g>
                <g>
                  <rect width="48" height="28" x="8" y="4"></rect>
                </g>
              </g>
            </g>
          </svg> <span class="legend-item-name">[C<sub>19</sub>H<sub>18</sub>N<sub>2</sub>O<sub>7</sub>S<sub>2</sub> - H]⁺<br> Sample</span></div>
        <div class="legend-item"><svg width="64" height="32">
            <g>
              <g class="theor-graph compTheor">
                <g>
                  <path d="M0,31L2,31L4,31L6,31L8,31L10,30.7L12,30.4L14,29.8L16,28.3L18,26.2L20,22.9L22,18.4L24,13.3L26,7.900000000000002L28,3.6999999999999993L30,1L32,1L34,3.400000000000002L36,7.900000000000002L38,13L40,18.4L42,22.6L44,26.2L46,28.3L48,29.5L50,30.4L52,30.7L54,31L56,31L58,31L60,31L62,31"></path>
                </g>
              </g>
            </g>
          </svg> <span class="legend-item-name">[C<sub>8</sub>H<sub>10</sub>S<sub>2</sub> - H]⁻<br> Theoretical</span></div>
        <div class="legend-item"><svg width="64" height="32">
            <g>
              <g class="sample-graph compSample">
                <g>
                  <circle cx="32" cy="4" r="4"></circle>
                </g>
                <g>
                  <line x1="32" x2="32" y1="4" y2="32"></line>
                </g>
                <g>
                  <rect width="48" height="28" x="8" y="4"></rect>
                </g>
              </g>
            </g>
          </svg> <span class="legend-item-name">[C<sub>8</sub>H<sub>10</sub>S<sub>2</sub> - H]⁻<br> Sample</span></div>
      </div>
    </div>
  </div>
</div>
</div>
`;
